# q2lsp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  q2lsp.code-workspace
.beads/: issues.jsonl
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: agents-md.yml  quality-gate.yml  release-publish.yml  vscode-extension-ci.yml  vscode-extension-release.yml
doc/prompts/: RELEASE_POLICY.md  RELEASING.md  TRUSTED_PUBLISHING_PREREQS.md
extensions/vscode-q2lsp/: .vscode-test.mjs  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
extensions/vscode-q2lsp/src/: client.ts  config.ts  diagnosis.ts  extension.ts  helpers.ts  interpreter.ts
extensions/vscode-q2lsp/src/test/: client.test.ts  config.test.ts  diagnosis.test.ts  extension.test.ts  interpreter.test.ts
scripts/: convert2gif.sh  gen_project_structure.py  install_git_hooks.py
src/q2lsp/: __main__.py  cli.py  logging.py
src/q2lsp/adapters/: __init__.py  completion_adapter.py
src/q2lsp/core/: __init__.py  completion_engine.py  document.py  types.py
src/q2lsp/lsp/: __init__.py  adapter.py  completion_context.py  completions.py  document_commands.py  error_handling.py  hover.py  parser.py  server.py  types.py
src/q2lsp/lsp/diagnostics/: __init__.py  codes.py  collector.py  command_level.py  debounce.py  diagnostic_issue.py  document_level.py  hierarchy.py  matching.py  models.py  stages.py  validator.py
src/q2lsp/qiime/: __init__.py  catalog.py  command_hierarchy.py  hierarchy_keys.py  hierarchy_provider.py  options.py  q2cli_gateway.py  signature_params.py  types.py
src/q2lsp/usecases/: __init__.py  get_completions_usecase.py
tests/: test_cli.py  test_logging.py  test_release_workflow_consistency.py  test_workflow_hardening.py
tests/adapters/: test_completion_adapter.py
tests/contract/: test_completion_hierarchy_contract.py
tests/core/: test_completion_engine.py  test_document_snapshot.py  test_import_boundaries.py
tests/helpers/: completions.py  cursor.py  test_cursor.py
tests/integration/: test_completions_integration.py
tests/lsp/: __init__.py  test_adapter.py  test_completion_context.py  test_completions.py  test_cross_feature_consistency.py  test_diagnostics_integration.py  test_diagnostics_offset_map.py  test_diagnostics_server.py  test_document_commands.py  test_error_handling.py  test_hover.py  test_parser.py  test_server.py
tests/lsp/diagnostics/: test_collector.py  test_import_integrity.py  test_validator.py
tests/lsp/e2e/: __init__.py  conftest.py  lsp_client.py  server_entry.py  test_stdio_smoke.py
tests/qiime/: test_cache_telemetry.py  test_catalog_provider.py  test_command_hierarchy.py  test_command_hierarchy_unit.py  test_hierarchy_provider.py  test_options.py  test_q2cli_gateway.py  test_qiime_catalog.py
tests/usecases/: test_completion_path_equivalence.py  test_get_completions_usecase.py
