[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q2lsp"
version = "0.2.0b3"
description = "A language server protocol implementation for qiime2."
authors = [
    { name = "q2lsp contributors" },
]
maintainers = [
    { name = "q2lsp maintainers" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "qiime2",
    "lsp",
    "language-server",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
requires-python = ">=3.10"
dependencies = [
    "returns>=0.26.0,<0.27", "pygls>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/geometriccross/q2lsp"
Repository = "https://github.com/geometriccross/q2lsp"
Issues = "https://github.com/geometriccross/q2lsp/issues"

[tool.setuptools.packages.find]
where = ["src"]

# --- Tool Configurations ---

[tool.pylsp.plugins.ruff]
enabled = true
formatEnabled = true
lineLength = 120

[tool.pyright]
typeCheckingMode = "standard"
reportUndefinedVariable = true
pythonVersion = "3.10"
venvPath = ".pixi/envs"
venv = "dev"
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = false
reportUnusedClass = false

reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = true

include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
main_file = "src/q2lsp/__main__.py"
addopts = [
    "-ra",
]
testpaths = ["tests"]

# --- Pixi Configuration ---

[tool.pixi.workspace]
channels = [
	"https://prefix.dev/conda-forge",
	"https://packages.qiime2.org/qiime2/2025.10/tiny/released",
    "https://packages.qiime2.org/qiime2/2025.10/amplicon/released",
    "conda-forge",
    "bioconda",
]
platforms = ["linux-64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.package.host-dependencies]
setuptools = "*"

[tool.pixi.pypi-dependencies]
q2lsp = { path = ".", editable = true }

# --- qiime2-tiny Feature ---

[tool.pixi.feature.dev.pypi-dependencies]
ruff = ">=0.14.1"
pytest = ">=8.4.1"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"
pytest-skip-slow = ">=0.0.5"
pytest-xdist = ">=3.8.0"
pyright = ">=1.1.407,<2"
anyio = "*"
pytest-asyncio = "*"

[tool.pixi.environments]
default = { features = ["qiime2-tiny"], solve-group = "default" }
dev = { features = ["qiime2-tiny", "dev"], solve-group = "default" }
prod = { features = ["qiime2-tiny"], solve-group = "default" }

[tool.pixi.tasks]
agents-structure = "python scripts/gen_project_structure.py"
agents-structure-check = "python scripts/gen_project_structure.py --check"
git-hooks-install = "python scripts/install_git_hooks.py"

[tool.pixi.feature.qiime2-tiny.dependencies]
_r-mutex = "==1.0.1"
annotated-types = "==0.7.0"
appdirs = "==1.4.4"
argon2-cffi = "==25.1.0"
argon2-cffi-bindings = "==25.1.0"
arrow = "==1.4.0"
asttokens = "==3.0.0"
atpublic = "==6.0.2"
attrs = "==25.4.0"
bcrypt = "==5.0.0"
beautifulsoup4 = "==4.14.2"
bibtexparser = "==1.4.3"
biom-format = "==2.1.16"
bleach = "==6.2.0"
bleach-with-css = "==6.2.0"
brotli-python = "==1.2.0"
bwidget = "==1.10.1"
bzip2 = "==1.0.8"
c-ares = "==1.34.5"
ca-certificates = "==2025.11.12"
cached-property = "==1.5.2"
cached_property = "==1.5.2"
certifi = "==2025.11.12"
cffi = "==2.0.0"
chardet = "==5.2.0"
charset-normalizer = "==3.4.4"
click = "==8.1.8"
colorama = "==0.4.6"
comm = "==0.2.3"
conda-pack = "==0.8.1"
cryptography = "==46.0.3"
debugpy = "==1.8.17"
decorator = "==4.4.2"
defusedxml = "==0.7.1"
dill = "==0.4.0"
entrypoints = "==0.4"
exceptiongroup = "==1.3.0"
executing = "==2.2.1"
filelock = "==3.20.0"
"flufl.lock" = "==8.2.0"
font-ttf-dejavu-sans-mono = "==2.37"
font-ttf-ubuntu = "==0.83"
fonts-conda-ecosystem = "==1"
fonts-conda-forge = "==1"
fqdn = "==1.5.1"
fribidi = "==1.0.16"
frictionless = "==5.5.0"
globus-sdk = "==4.1.0"
graphite2 = "==1.3.14"
h2 = "==4.3.0"
h5py = "==3.11.0"
hdf5 = "==1.14.3"
hpack = "==4.1.0"
humanize = "==4.14.0"
hyperframe = "==6.1.0"
idna = "==3.11"
ijson = "==3.4.0.post0"
importlib-metadata = "==8.7.0"
iniconfig = "==2.3.0"
invoke = "==2.2.1"
iow = "==1.0.5"
ipykernel = "==6.29.5"
ipython = "==8.21.0"
ipython_genutils = "==0.2.0"
isodate = "==0.7.2"
isoduration = "==20.11.0"
jedi = "==0.19.2"
jinja2 = "==3.1.6"
joblib = "==1.5.2"
jsonpointer = "==3.0.0"
jsonschema = "==4.25.1"
jsonschema-specifications = "==2025.9.1"
jsonschema-with-format-nongpl = "==4.25.1"
jupyter_client = "==7.4.9"
jupyter_core = "==5.9.1"
jupyter_events = "==0.12.0"
jupyter_server = "==2.17.0"
jupyter_server_terminals = "==0.5.3"
jupyterlab_pygments = "==0.3.0"
krb5 = "==1.21.3"
lark = "==1.3.1"
lerc = "==4.0.0"
libaec = "==1.1.4"
libblas = "==3.9.0"
libcblas = "==3.9.0"
libedit = "==3.1.20250104"
libev = "==4.33"
libexpat = "==2.7.1"
libffi = "==3.5.2"
libgfortran = "==15.2.0"
libgfortran5 = "==15.2.0"
libiconv = "==1.18"
libjpeg-turbo = "==3.1.2"
liblapack = "==3.9.0"
liblapacke = "==3.9.0"
liblzma = "==5.8.1"
libopenblas = "==0.3.30"
libsodium = "==1.0.18"
libwebp-base = "==1.6.0"
lz4 = "==4.4.5"
lz4-c = "==1.10.0"
make = "==4.4.1"
markdown-it-py = "==4.0.0"
marko = "==2.2.1"
markupsafe = "==3.0.3"
matplotlib-inline = "==0.2.1"
mdurl = "==0.1.2"
mistune = "==3.1.4"
mpi = "==1.0.1"
mypy_extensions = "==1.1.0"
natsort = "==8.4.0"
nbclassic = "==1.3.3"
nbclient = "==0.10.2"
nbconvert-core = "==7.16.6"
nbformat = "==5.10.4"
ncurses = "==6.5"
nest-asyncio = "==1.6.0"
networkx = "==3.1"
notebook = "==6.5.5"
notebook-shim = "==0.2.4"
numpy = "==1.26.4"
openssl = "==3.6.0"
overrides = "==7.7.0"
packaging = "==25.0"
pandas = "==2.2.2"
pandera = "==0.26.1"
pandera-base = "==0.26.1"
pandocfilters = "==1.5.0"
paramiko = "==4.0.0"
parsl = "==2024.4.15"
parso = "==0.8.5"
patsy = "==1.0.2"
petl = "==1.7.17"
pexpect = "==4.9.0"
pickleshare = "==0.7.5"
pip = "==25.3"
pixman = "==0.46.4"
platformdirs = "==4.5.0"
pluggy = "==1.6.0"
prometheus_client = "==0.23.1"
prompt-toolkit = "==3.0.52"
psutil = "==7.1.3"
ptyprocess = "==0.7.0"
pure_eval = "==0.2.3"
pycparser = "==2.22"
pydantic = "==2.12.4"
pydantic-core = "==2.41.5"
pygments = "==2.19.2"
pyhmmer = "==0.11.2"
pyjwt = "==2.10.1"
pynacl = "==1.5.0"
pyparsing = "==3.2.5"
pysocks = "==1.7.1"
python-dateutil = "==2.9.0.post0"
python-fastjsonschema = "==2.21.2"
python-json-logger = "==2.0.7"
python-slugify = "==8.0.4"
python-tzdata = "==2025.2"
python_abi = "==3.10"
pytz = "==2025.2"
pyyaml = "==6.0.3"
pyzmq = "==24.0.1"
q2-metadata = "==2025.10.0"
q2-mystery-stew = "==2025.10.0"
q2-types = "==2025.10.0"
q2cli = "==2025.10.1"
q2templates = "==2025.10.0"
qiime2 = "==2025.10.1"
r-base = "==4.3.3"
r-here = "==1.0.1"
r-lattice = "==0.22_7"
r-matrix = "==1.6_5"
r-png = "==0.1_8"
r-rappdirs = "==0.3.3"
r-rcpp = "==1.1.0"
r-rcpptoml = "==0.2.3"
r-reticulate = "==1.36.0"
r-rlang = "==1.1.6"
r-rprojroot = "==2.1.1"
r-withr = "==3.0.2"
readline = "==8.2"
referencing = "==0.37.0"
requests = "==2.32.5"
rfc3339-validator = "==0.1.4"
rfc3986 = "==2.0.0"
rfc3986-validator = "==0.1.1"
rfc3987-syntax = "==1.1.0"
rich = "==14.2.0"
rnanorm = "==2.1.0"
rpds-py = "==0.28.0"
scikit-bio = "==0.6.2"
scikit-learn = "==1.4.2"
scipy = "==1.13.0"
send2trash = "==1.8.3"
setproctitle = "==1.3.6"
setuptools = "==80.9.0"
shellingham = "==1.5.4"
simpleeval = "==1.0.3"
six = "==1.17.0"
sniffio = "==1.3.1"
soupsieve = "==2.8"
stack_data = "==0.6.3"
statsmodels = "==0.14.5"
stringcase = "==1.2.0"
tabulate = "==0.9.0"
tblib = "==3.2.2"
terminado = "==0.18.1"
text-unidecode = "==1.3"
threadpoolctl = "==3.6.0"
tinycss2 = "==1.4.0"
tk = "==8.6.13"
tktable = "==2.10"
tomli = "==2.3.0"
tomlkit = "==0.13.3"
tornado = "==6.5.2"
traitlets = "==5.9.0"
typeguard = "==4.4.4"
typer = "==0.20.0"
typer-slim = "==0.20.0"
typer-slim-standard = "==0.20.0"
typing-extensions = "==4.15.0"
typing-inspection = "==0.4.2"
typing_extensions = "==4.15.0"
typing_inspect = "==0.9.0"
typing_utils = "==0.1.0"
tzdata = "==2025b"
tzlocal = "==2.1"
unifrac = "==1.3"
unifrac-binaries = "==1.4"
uri-template = "==1.3.0"
urllib3 = "==2.5.0"
validators = "==0.35.0"
wcwidth = "==0.2.14"
webcolors = "==25.10.0"
webencodings = "==0.5.1"
websocket-client = "==1.9.0"
wheel = "==0.45.1"
yaml = "==0.2.5"
zeromq = "==4.3.5"
zipp = "==3.23.0"

[tool.pixi.feature.qiime2-tiny.target.linux-64.dependencies]
_libgcc_mutex = "==0.1"
_openmp_mutex = "==4.5"
binutils_impl_linux-64 = "==2.45"
cairo = "==1.18.4"
curl = "==8.17.0"
font-ttf-inconsolata = "==3.0"
font-ttf-source-code-pro = "==2.38"
fontconfig = "==2.15.0"
freetype = "==2.14.1"
gcc_impl_linux-64 = "==15.2.0"
gfortran_impl_linux-64 = "==15.2.0"
gsl = "==2.7"
gxx_impl_linux-64 = "==15.2.0"
harfbuzz = "==12.2.0"
htslib = "==1.22.1"
icu = "==75.1"
kernel-headers_linux-64 = "==5.14.0"
keyutils = "==1.6.3"
ld_impl_linux-64 = "==2.45"
libcurl = "==8.17.0"
libdeflate = "==1.25"
libfreetype = "==2.14.1"
libfreetype6 = "==2.14.1"
libgcc = "==15.2.0"
libgcc-devel_linux-64 = "==15.2.0"
libgcc-ng = "==15.2.0"
libgfortran-ng = "==15.2.0"
libglib = "==2.86.1"
libgomp = "==15.2.0"
libnghttp2 = "==1.67.0"
libnsl = "==2.0.1"
libpng = "==1.6.50"
libsanitizer = "==15.2.0"
libsqlite = "==3.51.0"
libssh2 = "==1.11.1"
libstdcxx = "==15.2.0"
libstdcxx-devel_linux-64 = "==15.2.0"
libstdcxx-ng = "==15.2.0"
libtiff = "==4.7.1"
libuuid = "==2.41.2"
libxml2 = "==2.15.1"
libxml2-16 = "==2.15.1"
libxslt = "==1.1.43"
libzlib = "==1.3.1"
lxml = "==6.0.2"
pango = "==1.56.4"
pcre2 = "==10.46"
pthread-stubs = "==0.4"
python = "==3.10.19"
r-jsonlite = "==2.0.0"
samtools = "==1.22.1"
sed = "==4.9"
sysroot_linux-64 = "==2.34"
xorg-libice = "==1.1.2"
xorg-libsm = "==1.2.6"
xorg-libx11 = "==1.8.12"
xorg-libxau = "==1.0.12"
xorg-libxdmcp = "==1.1.5"
xorg-libxext = "==1.3.6"
xorg-libxrender = "==0.9.12"
xorg-libxt = "==1.3.1"
zlib = "==1.3.1"
zstandard = "==0.25.0"
zstd = "==1.5.7"

[tool.pixi.feature.qiime2-tiny.target.osx-64.dependencies]
anyio = "==4.11.0"
appnope = "==0.1.4"
cairo = "==1.18.0"
cctools_osx-64 = "==986"
clang = "==18.1.7"
clang-18 = "==18.1.7"
clang_impl_osx-64 = "==18.1.7"
clang_osx-64 = "==18.1.7"
clangxx = "==18.1.7"
clangxx_impl_osx-64 = "==18.1.7"
clangxx_osx-64 = "==18.1.7"
compiler-rt = "==18.1.7"
compiler-rt_osx-64 = "==18.1.7"
curl = "==8.8.0"
expat = "==2.7.1"
font-ttf-inconsolata = "==3.000"
font-ttf-source-code-pro = "==2.038"
fontconfig = "==2.14.2"
freetype = "==2.12.1"
gfortran_impl_osx-64 = "==12.3.0"
gfortran_osx-64 = "==12.3.0"
gmp = "==6.3.0"
harfbuzz = "==9.0.0"
htslib = "==1.21"
icu = "==73.2"
isl = "==0.26"
ld64_osx-64 = "==711"
libasprintf = "==0.25.1"
"libclang-cpp18.1" = "==18.1.7"
libcurl = "==8.8.0"
libcxx = "==21.1.5"
libdeflate = "==1.20"
libgettextpo = "==0.25.1"
libgfortran-devel_osx-64 = "==12.3.0"
libglib = "==2.80.2"
libintl = "==0.25.1"
libllvm18 = "==18.1.7"
liblzma-devel = "==5.8.1"
libnghttp2 = "==1.58.0"
libpng = "==1.6.43"
libsqlite = "==3.46.0"
libssh2 = "==1.11.0"
libtiff = "==4.6.0"
libxml2 = "==2.12.7"
libxslt = "==1.1.39"
libzlib = "==1.2.13"
llvm-openmp = "==21.1.5"
llvm-tools = "==18.1.7"
lxml = "==5.2.2"
mpc = "==1.3.1"
mpfr = "==4.2.1"
pango = "==1.54.0"
pcre2 = "==10.43"
pyobjc-core = "==12.0"
pyobjc-framework-cocoa = "==12.0"
pytest = "==9.0.1"
python = "==3.10.14"
r-jsonlite = "==1.9.1"
samtools = "==1.21"
sigtool = "==0.1.3"
tapi = "==1100.0.11"
xz = "==5.8.1"
xz-gpl-tools = "==5.8.1"
xz-tools = "==5.8.1"
zlib = "==1.2.13"
zstandard = "==0.23.0"
zstd = "==1.5.6"
